De momento funciona lo de unirse a una partida y crearla. ( A medias)
